# HKUST-Robotics-SoftwareTut-2019

./: README.md
Extra Reference Materials/: README.md  git.md
F1_Internal2019/: .cproject  .mxproject  .project  CMakeLists.txt  F1_Internal2019.elf.launch  F1_Internal2019.ioc  F1_Internal2019_2.ioc  STM32F103VDTX_FLASH.ld  project.cmake
F1_Internal2019/Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_uart.h
F1_Internal2019/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal.c  stm32f1xx_hal_i2c.c  stm32f1xx_hal_uart.c
F1_Internal2019/Inc/: adc.h  cambus.h  camera.h  gpio.h  i2c.h  lcd.h  lcd_font.h  main.h  ov7725.h  spi.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  strhelper.h  tim.h  usart.h
F1_Internal2019/Src/: adc.c  cambus.c  camera.c  dma.c  gpio.c  i2c.c  lcd.c  main.c  spi.c  stm32f1xx_it.c  tim.c  usart.c
Tutorial 0 - C Programming/: Classwork 0.md  Homework 0.md  Tutorial 0 Note.md
Tutorial 0 - C Programming/cw-answer/: README.md
Tutorial 0 - C Programming/hw-answer/: README.md
Tutorial 1 - GPIO/: Setup.md  Tutorial 1 Classwork.md  Tutorial 1 Homework.md  Tutorial 1 Notes.md
Tutorial 1 - GPIO/Solutions/: classwork(solutions).md
Tutorial 1 - GPIO/cw-answer/: README.md
Tutorial 1 - GPIO/hw-answer/: README.md  homework.c
Tutorial 2 - PWM/: Tutorial 2 Notes and Classwork.md  Tutorial_2_Homework.md
Tutorial A1 - UART - TFT - Header/: Tutorial A1 - Advanced Program Structure.md  Tutorial Note A1 - UART.md
Tutorial A2 - Image Processing/: Tutorial Note A2 - Image Processing.md
Tutorial A2 - Magnetic Sensor/: notes.md
